# firmware-bl616

./: CMakeLists.txt  Makefile  README.md  buildall.bat  cfg.h  crc.c  fatfs_conf_user.h  flash.ini  flash_prog_cfg.ini  hidparser.c  hidparser.h  main.c  main.h  programmer.c  programmer.h  usb_config.h  usb_gamepad.c  usb_gamepad.h  usb_host.c  utils.h
scripts/: README.md  fs.py  jtag.py  liveuart.py  print_uart.py  tdi_compare.py  verify_uart_screen.py
